--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>GAME OF LIFE</title>
     <style> body {padding: 0; margin: 0;} </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
-    <!-- <script src="../p5.dom.min.js"></script> -->
+    <script src="p5.dom.min.js"></script>
     <!-- <script src="../addons/p5.sound.min.js"></script> -->
 
   </head>
   <body>
-
     <script src="sketch.js"></script>
   </body>
 </html>
